--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "./node_modules/.bin/cypress"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "cypress": "^9.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -17,6 +17,19 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "cypress": "^9.5.0",
     "vite": "^2.8.0"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/laurencetuchin/realestate-frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/laurencetuchin/realestate-frontend/issues"
+  },
+  "homepage": "https://github.com/laurencetuchin/realestate-frontend#readme",
+  "description": ""
 }
