--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "test": "./node_modules/.bin/cypress"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "chalk": "^5.0.0",
+    "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-toastify": "^8.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
     "cypress": "^9.5.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   },
   "main": "vite.config.js",
