--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "realestate-frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
